# steamconquest

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  ROADMAP.md  Steam_Web_API_Documentation.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  errors.py  main.py
app/ai/: __init__.py  anthropic_client.py  base.py  client.py  gemini_client.py
app/core/: cache.py  orcamento.py  rate_limit.py
app/schemas/: models.py
app/services/: achievements.py
app/steam/: client.py
app/templates/: base.html  error.html  game.html  index.html
app/web/: routes.py
docs/adr/: 0001-steam-client-unico.md  0002-fase-b-sem-monetizacao.md
docs/superpowers/plans/: 2026-07-19-cache-negativo-falha-transitoria.md  2026-07-19-ordenacao-derivada.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts
frontend/design-system/: MASTER.md
frontend/src/: App.tsx  index.css
plans/: 001-gamecard-hover-scope-and-reduced-motion.md  002-progress-scope-transition.md  003-button-press-feedback.md  README.md
spec/: spec-architecture-steam-achievements.md  spec-design-cache-negativo-falha-transitoria.md  spec-design-dica-conquista-ia.md  spec-design-guia-conquista-pendente.md  spec-design-ordenacao-derivada.md  spec-design-provedor-de-ia-plugavel.md  spec-home-conversao.md  spec-quase-la-completion-loop.md
tests/: conftest.py  test_ai_client.py  test_app_config.py  test_cache.py  test_client.py  test_orcamento.py  test_routes.py  test_service.py
(+36 files in other folders)
